Fixed MAGE-2797: Long FPT name (and product name) do not fit into "My cart" block

--- a/skin/frontend/default/modern/css/styles.css
+++ b/skin/frontend/default/modern/css/styles.css
@@ -574,6 +574,9 @@ tr.summary-details-excluded { font-style:italic; }
 /* Mini Products List */
 .mini-products-list .product-image { float:left; width:50px; border:1px solid #a9a9a9; }
 .mini-products-list .product-details { margin-left:60px; }
+.block-cart .mini-products-list .product-details .product-name,
+.block-cart .mini-products-list .product-details .nobr small { word-wrap:break-word; }
+.block-cart .mini-products-list .product-details .nobr { white-space:normal !important; }
 
 /* Block: Account */
 .block-account .block-title { border:0; background:#666; }
